Fix formatting of files